# fluxer.py

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: __init__.py  command_bot.py  compat_bot.py  echo_bot.py  feature_bot.py
examples/extensions/: __init__.py  demo_ext.py
fluxer/: DOCS.md  README.md  __init__.py  abc.py  allowed_mentions.py  api.py  api_endpoints.json  client.py  color.py  colour.py  domain_models.py  embeds.py  enums.py  errors.py  file.py  files.py  gateway.py  http.py  intents.py  mentions.py  models.py  object.py  permissions.py  requirements.txt  rest.py  utils.py  voice.py
fluxer/ext/: __init__.py
fluxer/ext/commands/: __init__.py
fluxer/ext/tasks/: __init__.py
fluxer/scripts/: generate_api.py
